# GameOfLife

./: README.dox  README.md  README.md~
data/: m0.txt~  m1.txt  m2.txt
graphical_version/: CMakeLists.txt  Makefile  README.md  conf.dox
graphical_version/data/: m0.txt
graphical_version/include/: barrier.hpp  barrier.hpp~  fco.hpp  fco.hpp~  matrix.hpp  matrix.hpp~  matrixG.hpp  matrixG.hpp~  program_options.hpp
graphical_version/src/: barrier.cpp  barrier.cpp~  fco.cpp  main.cpp  matrix.cpp  matrixG.cpp  matrixG.cpp~  program_options.cpp  program_options.cpp~
include/: barrier.hpp  (+4 more)
xeon_version/: CMakeLists.txt  Makefile  README.md  README.md~
xeon_version/attempts/: 1.2m.cpp  2.1m.cpp  3.array_bool.cpp  4.vector_bool.cpp  5.array_bitset.cpp  6.dynamic_bitset.cpp  7.simpleGOL.cpp  8.simple_farm.cpp  Makefile
xeon_version/include/: barrier.hpp  functions.h  functions.hpp  grid.h  grid.hpp  grid_vect.h  master.h  master.hpp  matrix.h  program_options.h  program_options.hpp  shared_functions.h  specialized_functions.h  spinning_barrier.h  task.h  worker.h  worker.hpp  worker_vect.h
xeon_version/performance_comparison/: avg_time.sh  best_time.ods  compile_app.sh  perf_1vs2.ods  perf_1vs2.txt  perf_data_structure.ods  perf_data_structure.txt  perf_thread_1M.txt  serial_fraction.ods  test_app.sh  test_app_multiple.sh  test_attempts.sh  test_best_grain.sh  test_best_grain_multiple.sh
xeon_version/performance_comparison/results_grain/: ff_host.txt  ff_host.txt~  ff_phi.txt  thread_host.txt  thread_host.txt~  thread_phi.txt
xeon_version/performance_comparison/results_version1/: perf_ff_100M.txt  perf_ff_25M.txt  perf_size_100M.ods  perf_size_25M.ods  perf_thread_100M.txt  perf_thread_25M.txt  perf_vect_ff_100M.txt  perf_vect_ff_25M.txt  perf_vect_thread_100M.txt  perf_vect_thread_25M.txt  serial_fraction.ods
xeon_version/src/: barrier.cpp  functions.cpp  grid.cpp  grid_vect.cpp  main.cpp  main_ff.cpp  main_thread.cpp  master.cpp  matrix.cpp  program_options.cpp  shared_functions.cpp  specialized_functions.cpp  spinning_barrier.cpp  worker.cpp  worker_vect.cpp
(+21 files in other folders)
